--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo": "~54.0.1",
     "expo-blur": "^15.0.6",
     "expo-constants": "~18.0.8",
+    "expo-document-picker": "^14.0.8",
     "expo-font": "^14.0.7",
     "expo-glass-effect": "^0.1.1",
     "expo-haptics": "^15.0.6",
@@ -39,9 +40,11 @@
     "expo-linear-gradient": "^15.0.6",
     "expo-linking": "^8.0.7",
     "expo-localization": "^17.0.8",
+    "expo-media-library": "^18.2.1",
     "expo-network": "^8.0.7",
     "expo-router": "^6.0.0",
     "expo-secure-store": "^15.0.7",
+    "expo-sharing": "^14.0.8",
     "expo-splash-screen": "^31.0.8",
     "expo-status-bar": "~3.0.7",
     "expo-symbols": "^1.0.6",
