--- a/app.json
+++ b/app.json
@@ -1,4 +1,3 @@
-
 {
   "expo": {
     "name": "Alliance ARM",
@@ -39,13 +38,13 @@
       "expo-web-browser",
       "expo-localization"
     ],
-    "scheme": "alliance-arm",
+    "scheme": "Alliance ARM",
     "experiments": {
       "typedRoutes": true
     },
     "extra": {
       "router": {},
-      "backendUrl": "https://q4thnc8stu4bc4fcm2ekabu3ahgaahtu.app.specular.dev"
+      "backendUrl": "https://prod-proj-lcqctzjnnyj98dyvuaf4w-liwg5h36mq-ey.a.run.app"
     }
   },
   "scheme": "alliance-arm"
