fix: Update backend URL, add health check, and improve admin login error handling

--- a/app.json
+++ b/app.json
@@ -1,3 +1,4 @@
+
 {
   "expo": {
     "name": "Alliance ARM",
@@ -44,7 +45,7 @@
     },
     "extra": {
       "router": {},
-      "backendUrl": "https://prod-proj-lcqctzjnnyj98dyvuaf4w-liwg5h36mq-ey.a.run.app"
+      "backendUrl": "https://q4thnc8stu4bc4fcm2ekabu3ahgaahtu.app.specular.dev"
     }
   }
 }
